# inpedia

./: .gitignore  Cargo.toml  README.md
inpedia/: Cargo.toml
inpedia-app/frontend/: package-lock.json  package.json
inpedia-app/frontend/src/: App.css  App.tsx  api.ts  types.ts
inpedia-app/frontend/src/components/: AddForm.css  AddForm.tsx  DiffView.css  DiffView.tsx  QuoteCard.css  QuoteCard.tsx  QuoteDetail.css  QuoteDetail.tsx
inpedia-app/src-tauri/: Cargo.toml  tauri.conf.json
inpedia-app/src-tauri/src/: commands.rs  lib.rs  main.rs
inpedia-core/: Cargo.toml
inpedia-core/src/: db.rs  embedding.rs  lib.rs  models.rs  search.rs
inpedia/src/: main.rs  output.rs
inpedia/src/commands/: add.rs  get.rs  history.rs  list.rs  mod.rs  search.rs  tag.rs  update.rs
