[package]
name = "inpedia-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
fastembed.workspace = true
uuid.workspace = true
chrono.workspace = true
similar.workspace = true
tokio.workspace = true
dirs-next = "2"
