[package]
name = "inpedia"
version.workspace = true
edition.workspace = true

[dependencies]
inpedia-core = { path = "../inpedia-core" }
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
similar.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
colored = "2"
