[package]
name = "inpedia-app"
version.workspace = true
edition.workspace = true

[lib]
name = "inpedia_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
inpedia-core = { path = "../../inpedia-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
